extras/.chainsaw-test/cm.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: keys
  # namespace: default
data: 
       key: |
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE6QsNef3SKYhJVYSVj+ZfbPwJd0pv
[...]
                -----END PUBLIC KEY-----
