extras/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: verify-image-ivpol
spec:
  # disable templating because it can cause issues with CEL expressions
  template: false
  
  steps:
  - name: step-01
    try:
    - apply:
        file: ../ivpol.yaml
        # use cpol to test ClusterPolicy with verify-image
  - name: create-cm
    try:
    - apply:
        file: cm.yaml
  - name: step-02
    try:
    - create:
        file: good.yaml
        timeout: 60s
    - create:
       timeout: 60s
       expect:
        - check:
            ($error != null): true
       file: bad.yaml
